# localfm

./: .gitignore  Containerfile  Justfile  README.md  main.py  manage.py  mprocs.gnu.yaml  mprocs.win.yaml  pyproject.toml
deployment/local/: Caddyfile  db-init.sql
deployment/scripts/: daily_scrobble_load.sh  daily_scrobble_save.sh
localfm/: app.py  asgi.py  main.py  settings.py  urls.py  wsgi.py
localfm/access/: apps.py  auth_backend.py  models.py  views.py
localfm/access/migrations/: 0001_initial.py
localfm/bridge/: apps.py  import.py  urls.py  views.py
localfm/bridge/management/commands/: import.py  import_scrobbles.py
localfm/core/: data.py  responses.py  runtime.py
localfm/sessions/: apps.py  models.py
localfm/tracks/: apps.py  library.py  models.py  payloads.py  urls.py  views.py
localfm/tracks/management/commands/: import_library.py
localfm/tracks/migrations/: 0001_initial.py
localfm/tracks/templates/: index.html
