[project]
name = "localfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.8",
    "django-ninja>=1.5.0",
    "pylast>=7.0.0",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
