[project]
name = "localfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.8",
    "django-ninja>=1.5.0",
    "psycopg>=3.3.1",
    "pylast>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "tinytag>=2.1.2",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.7",
]
